--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -16,9 +16,8 @@
         <td><%= link_to topic.title, topic %></td>
         <td><%= pluralize(topic.votes.count, "vote")%></td>
         <td><%= button_to '投票+1', upvote_topic_path(topic), method: :post %></td>
-        <td><%= link_to 'Show', topic %></td>
-        <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
-        <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= button_to '减票-1', downvote_topic_path(topic), method: :post %></td>
+        <td><%= link_to 'Delete', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
