--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -26,3 +26,6 @@
 <br>
 
 <%= link_to 'New Topic', new_topic_path %>
+<%= link_to 'About', about_index_path %>
+<%= link_to 'About2', about_path %>
+<a href="about">about3</a>
